css/stylesheet.css
body {
  background: #222;
}

h2 {
  margin-top: 20px;
  margin-bottom: 20px;
}

.navbar-default {
  background-color: #222;
  color: #fff;
  border-bottom: 1px solid #ccc;
}

.navbar-default .navbar-nav>li>a {
    color: #aaa;
}

.navbar-default .navbar-nav>li>a:hover {
    color: #fff;
}

.navbar-default .navbar-brand {
  color: #aaa;
}

.navbar-default .navbar-brand:hover {
  color: #fff;
}

.row {
  padding: 1%;
}

.portfolio-item .screenshot-placeholder {
  height: 400px;
  width: 100%;
  background: grey;
  border-radius: 10px;
  border: 1px solid grey;
}

.portfolio-item {
  margin-bottom: 50px;
}

.portfolio-item p {
  text-align: justify;
}

.portfolio-tools {
  padding: 20px 0;
}

.portfolio-tools p {
  text-align: center;
}

.portfolio-links {
  margin-top: 20px;
}

.portfolio-links a {
  text-decoration: none;
  display: inline-block;
  background: #fff;
  border: 1px solid #fff;
  color: #000;
  width: 9rem;
  padding: 5px;
  margin: 0 2px;
  border-radius: 18px;
}

.portfolio-links a:hover {
  color: #fff;
  background: #222;
}

.contact-icons {
  padding-top: 5%;
  font-size: 2em;
}

.contact-icons a {
  text-decoration: none;
  color: #fff;
}

.contact-icons a:hover {
  color: grey;
}

#title-section {
  background: #222;
  color: #fff;
  height: 50vh;
  text-align: center;
  padding-top: 15%;
  /*border-bottom: 1px solid #ccc;*/
}

#portfolio-section {
  background: #222;
  color: #fff;
  height: auto;
  text-align: center;
}

#about-section {
  background: #222;
  color: #fff;
  min-height: 50vh;
  text-align: center;
}

#about-section .screenshot-placeholder {
  height: 200px;
  width: 200px;
  margin: auto;
  background: blue;
  border-radius: 50%;
}

#about-section p {
  /*width: 50%;*/
  margin: 10px auto;
  text-align: center;
}

#contact-section {
  background: #222;
  color: #fff;
  height: 300px;
  text-align: center;
}

footer .row {
  background: #222;
  color: #fff;
  padding: 12px 0;
  text-align: center;
  border-top: 1px solid #ccc;
}

footer p {
  text-align: center;
}

@media (min-width: 768px) {
  .row {
    padding: 1% 5%;
  }

  .portfolio-description {
    position: relative;
    height: 400px;
  }

  .portfolio-tools {
    position: absolute;
    bottom: 0;
    width: 95%;
  }

  #about-section p {
    width: 50%;
  }
}

